fix more layout bugs

--- a/src/components/Contacts.css
+++ b/src/components/Contacts.css
@@ -9,6 +9,12 @@
   filter: contrast(0.3) saturate(2) !important;
 }
 
+.contactsWindow {
+  max-width: 100vw;
+  width: auto;
+  min-width: 0;
+}
+
 .contactsFilters label {
   width: 96px;
 }
@@ -36,9 +42,8 @@
 }
 .contactSaveButtons {
   display: flex;
-  justify-content: space-around;
+  justify-content: start;
   flex-direction: column;
-  width: 100%;
 }
 
 .contactsSearch .SelectBox {
